app/assets/stylesheets/app.css
/*
 * COLORS
 * https://coolors.co/ff7538-f3c853-c5e384-d7d7d5-528fb7-e6ecf0-f9f9f9-f1f1f1-d3d3d3
*/
:root {
  --blue-100: #CDE7F9;
  --blue-300: #9FCAF4;
  --blue-500: #4183C4;
  --blue-700: #1D5D9C;
  --blue-900: #084069;

  --black-100: #ADB5BD;
  --black-300: #868E96;
  --black-500: #495058;
  --black-700: #343A40;
  --black-900: #21252A;

  --grey-100: #F8F9FA;
  --grey-300: #F1F3F5;
  --grey-500: #EAEDEF;
  --grey-700: #DEE2E6;
  --grey-900: #CFD4DA;

  --green-100: #E9FBC2;
  --green-300: #DAF69C;
  --green-500: #C5E384;
  --green-700: #93C723;
  --green-900: #74A900;

  --yellow-100: #FFEFC3;
  --yellow-300: #F6D26F;
  --yellow-500: #F3C853;
  --yellow-700: #E7B01A;
  --yellow-900: #CB9501;

  --orange-100: #FAAE8C;
  --orange-300: #FD9161;
  --orange-500: #FF7538;
  --orange-700: #F35109;
  --orange-900: #D25016;

  --red-100: #FD8D8D;
  --red-300: #FA5959;
  --red-500: #FF4343;
  --red-700: #E32E2E;
  --red-900: #BE1A1A;


  --container-small: 450px;
  --container-medium: 650px;
  --container-large: 960px;

  --sidebar-bottom-height: 0px;

  --container-width: var(--container-large);
  --sidebar-width: 200px;
  --container-margin: max(0px, calc((100vw - var(--container-width) - var(--sidebar-width)) / 2));
}

/*
 * LAYOUT
*/

html, body { height: 100% }
@media screen and (max-width: 340px) { html { font-size: 14px; } }
@media screen and (max-width: 390px) { html { font-size: 15px; } }

.container { width: var(--container-width); margin-right: auto; }
.sidebar { width: var(--sidebar-width); margin-left: auto; }
.sidebar__content { position: fixed; width: var(--sidebar-width); top: var(--navbar-height); display: flex; flex-direction: column; }
.sidebar__item { border-top-right-radius: 0 !important; border-bottom-right-radius: 0 !important; }
.sidebar__item--selected { border-right: 2px solid var(--orange-700) !important; margin-right: -1px; }

@media screen and (max-width: 960px) {
  :root {
    --container-width: var(--container-medium);
  }
}

@media screen and (max-width: 650px) {
  .sidebar__text { display: none; }

  :root {
    --container-width: var(--container-small);
    --sidebar-width: 60px;
  }
}

@media screen and (max-width: 450px) {
  .sidebar { overflow: hidden; }
  .sidebar__content {
    z-index: 4;
    background-color: white;
    border-top: 1px solid var(--grey-500);
    flex-direction: row;
    position: fixed;
    width: unset;
    bottom: 0;
    left: 0;
    right: 0;
    top: unset;
  }
  .sidebar__item { flex-direction: column; flex-grow: 1; }
  .sidebar__item--selected { border-top: 2px solid var(--orange-700) !important; border-right: none !important; margin-top: -1px; border-top-left-radius: 0 !important; }

  :root {
    --container-width: 100%;
    --container-margin: 0;
    --sidebar-width: 0;
    --sidebar-bottom-height: 52px;
  }
}

/*
 * ANIMATIONS
*/
@keyframes slidein-left { from { transform: translate(-100%); } to { transform: translate(0%); } }
@keyframes slidein-right { from { transform: translate(100%); } to { transform: translate(0%); opacity: 1; } }
@keyframes slidein-bottom { from { transform: translate(0, 100%); } to { transform: translate(0, 0%); opacity: 1; } }
@keyframes dim { from { background-color: rgba(0,0,0,0); } to { background-color: rgba(0,0,0,0.5); } }
@keyframes appear  { from { opacity: 0; } to { opacity: 1; } }

/*
 * STYLING
*/
body { font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif; }
a { text-decoration: none; color: var(--blue-500); cursor: pointer; }
input { border: 1px solid var(--grey-300); border-radius: 0.25rem; padding: 0.45rem; font-size: 1rem; }
.input.small { padding: 0.4rem; font-size: 0.8rem; }
input:focus { border-color: var(--blue-300); outline: 0; }
.input.icon { border-top-left-radius: 0; border-bottom-left-radius: 0; }
.input.icon:focus { border-top-left-radius: 0; border-bottom-left-radius: 0; border-left-color: var(--blue-500); }

.input--tiny { padding-top: 0.1rem; padding-bottom: 0.1rem }

.input--error { border-color: var(--red-100); }

.label--field { color: var(--black-500); font-size: 0.8rem; }
.label--input { color: var(--grey-900); font-size: 0.6rem; margin-bottom: 2px; }



select { border: 1px solid var(--grey-300); border-radius: 0.25rem; padding: 0.45rem; font-size: 1rem; }
select.input-small { padding: 0.3rem; }
select:focus { border-color: var(--blue-300); outline: none; }
select {
	-webkit-appearance: none;
	background: url('data:image/svg+xml;utf8, <svg fill="none" viewBox="0 0 30 24" height="24" width="14" xmlns="http://www.w3.org/2000/svg"> <path xmlns="http://www.w3.org/2000/svg" d="M 0 8 L 10 18 L 20 8" stroke="%233d3d3d"></path> </svg> ') center right no-repeat;
	padding-right: 20px;
}


.button {
  position: relative;
  height: min-content;
  background-color: var(--grey-100);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  font-size: 1rem;
  text-decoration: none;
  color: black;
}
.button:hover { background-color: var(--grey-300); }
.button:focus { border-color: var(--blue-500); outline: none; }

.button--tiny { padding: 0.1rem 0.4rem }
.button--small { padding: 0.3rem 0.6rem; }
.button--medium { padding: 0.3rem 0.8rem; }
.button--tall { padding: 0.5rem 1rem; }
.button--wide { padding: 0.3rem 2rem; }

.button--basic { background-color: #fff; }
.button--primary { background-color: var(--blue-500); color: #fff; }
.button--primary:hover { background-color: var(--blue-700); }

.row__button--drag { cursor: grab; background-color: rgba(0,0,0,0); }
.row__button--drag:hover { background-color: inherit; }
.row__button--drag:active { cursor: grabbing; }

.button-group > .button { border-radius: 0; margin: 0 }
.button-group > .button:first-child { border-top-left-radius: 0.25rem; border-bottom-left-radius: 0.25rem }
.button-group > .button:last-child { border-top-right-radius: 0.25rem; border-bottom-right-radius: 0.25rem }

.no-select { user-select: none; -webkit-user-select: none; }
.dynamic-shape > .block { transition: height 0.5s, width 0.5s; }
.selected-shape > div { box-shadow: 0 0 0 1px #ffffff, 0 0 0 3px var(--blue-300); }


/*
 * DROPDOWN
*/

.dropdown { position: relative; display: inline-block; }

.dropdown-content {
  display: none;
  position: absolute;
  background-color: var(--grey-100);
  z-index: 5;
  border-radius: 0 0 0.25rem 0.25rem;
}

.dropdown-content a {
  padding: 0.5rem 1rem;
  text-decoration: none;
  display: block;
  cursor: pointer;
  border-radius: 0.25rem;
  text-align: center;
  color: black;
}

.dropdown-content a:hover { background-color: var(--grey-300) }

.dropdown:hover .dropdown-content { display: block; }


/*
 * LOADING SPINNER
*/

.spinner:after {
  content: " ";
  display: block;
  width: 80%;
  height: 80%;
  border-radius: 50%;
  border: 2px solid var(--grey-900);
  border-right-color: transparent;
  animation: rotation 1.2s linear infinite;
}

@keyframes rotation { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }


/*
 * MODAL
*/

.modal {
  position: fixed;
  background-color: white;
  z-index: 11;
  animation: slidein-bottom 0.5s;
  border-radius: 5px;
}

@media screen and (max-width: 425px) { .modal { width: 100%; } }
@media screen and (min-width: 425px) { .modal { width: 90%; max-width: 600px; min-width: 425px; } }
@media screen and (max-height: 700px) { .modal { top: 0; height: 100%; } }
@media screen and (min-height: 700px) { .modal { top: 20%; height: 80%; max-height: 600px; } }

.dimmer {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  background-color: rgba(0,0,0,0.5);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 10;
  animation: dim 0.5s;
}


/*
 * TOOLTIP
*/

.button__tooltip {
  display: none;
  position: absolute;
  top: -2rem;
  z-index: 20;
  transform: translateX(-35%);
  background-color: rgba(0,0,0,0.5);
  width: fit-content;
  white-space: nowrap;
  color: white;
  border-radius: 5px;
  padding: 5px;
  opacity: 0;
}

.button__tooltip--right { top: 50%; left: 100%; transform: translate(5px, -50%); }
.button__tooltip--bottom { top: 100%; transform: translate(-20%, 5px); }
.button__tooltip--left { top: 50%; right: 100%; transform: translate(-5px, -50%); }

.button:hover > .button__tooltip {
  display: block;
  animation: appear 0.5s ease 0.5s;
  animation-fill-mode: forwards;
}

